Code analysis: - added about 30 new sensitive sinks and some new userinput functions - RIPS now traces codeblocks, not lines anymore 	-> code in one line without whitespaces ("obfuscated") is now possible to analyse 	-> this also fixes several known bugs - RIPS now handles arrays and its keys a lot more accurate 	-> arrays are handled as variables with saved keys 	-> dynamic key values are resolved 	-> this also fixes several known bugs - RIPS is now recoded object oriented 	-> structure is better 	-> code easier to understand - fixes bug when an old define is overwritten by a new one - ignores "@" for correct detection of connected tokens - added leakscan: trace if return value of tainted sensitive sink is echo'd (non-blind/blind exploitation) - fixed lots of securing detection bugs - automatically scans for register_globals implementation (extract, parse_str, $$key = $value, import_request_variables, etc.) - lots of new testcases added and fixed - improved reconstruction of file names to be included - set_time_limit is set to 0 now
Interface:
- included SaveGraph patch
- added preloader information about current scanning status (thanks for the input, Michael Hoffmann)
- added links to the stats window to other windows
- fixed bug with color highlighting in regex search results
- improved jumping between functions in scan result
- moved http response splitting to clientside vulnerability list

--- a/css/term.css
+++ b/css/term.css
@@ -1,18 +1,6 @@
-body, html {
-	color: #111111;
-}
-
-.textcolor {
-	color: #ffffff;
-}
-
-.darkcolor {
-	color: black;
-}
-
 .userinput, .persistent {
 	list-style-type: disc;
-	color:grey; 
+	color:white; 
 }
 .validated {
 	list-style-type: disc;
@@ -24,42 +12,62 @@ body, html {
 }
 
 .vulnblock {
-	background-color:#D4D0C8;
-	color:black;
+	background-color:#223344;
+	color:#FFF;
 	font-weight:bold;
 }
 
 .codebox {
 	margin-bottom: 10px;
-	background-color: #ffffff;
+	background-color: #101820;
 }
 
-.windowcontent, #funccodecontent, #funccodetitle, .funclistcontent  {
-	background-color: #ffffff;
-	opacity:0.95;
+.windowcontent, .filecanvas, #funccodecontent, #funccodetitle, .funclistcontent {
+	background-color: #101820;
 }
 
 .markline {
-	background-color: #EF9486;
+	background-color: #0A212C;
 }
 
 .requires
-	{color: #000000; font-weight:bold;}
+	{color: #D2A8A1; font-weight:bold;}
 	
 .linenr
-	{color: #808080;}
+	{color: #444;}
 	
-.link
-	{color: #0000FF; font-weight:bold;}
+.link  
+	{color: #DC578C; font-weight:bold;}
 	
 .code,
 .phps-code, .phps-t-curly-open, .phps-t-dollar-open-curly-braces, .vulntitle
-	{color: #8000FF; font-family: "Bitstream Vera Sans Mono", "Monaco", "Courier New", monospace; font-size:1em; font-size:9pt; font-weight: bold;}
+	{color: #B5C9C9; font-family: "Bitstream Vera Sans Mono", "Monaco", "Courier New", monospace; font-size:1em; font-size:9pt;}
 
 .phps-t-string,
-.phps-t-eval
-	{color: #000000; font-weight: bold;}
+.phps-t-eval,
+.phps-t-print,
+.phps-t-include,
+.phps-t-include-once,
+.phps-t-require,
+.phps-t-require-once,
+.phps-t-isset,
+.phps-t-empty,
+.phps-t-while,
+.phps-t-do,
+.phps-t-try,
+.phps-t-catch,
+.phps-t-exit,
+.phps-t-unset,
+.phps-t-list,
+.phps-t-array,
+.phps-t-echo,
+.phps-t-start-heredoc,
+.phps-t-end-heredoc
+	{color: #FFFFFF;}
+/*E1E1F9*/
 	
+.phps-t-open-tag,
+.phps-t-close-tag,
 .phps-t-and-equal, 
 .phps-t-concat-equal, 
 .phps-t-div-equal, 
@@ -76,41 +84,16 @@ body, html {
 .phps-t-is-identical,
 .phps-t-is-not-equal,	
 .phps-t-is-not-identical,
-.phps-t-inc,
-.phps-t-dec,
 .phps-t-object-operator,
-.phps-t-double-arrow,
-.phps-t-boolean-or,
-.phps-t-boolean-and
-	{color: #8000FF;}
-	
-.phps-t-print,
-.phps-t-include,
-.phps-t-include-once,
-.phps-t-require,
-.phps-t-require-once,
-.phps-t-isset,
-.phps-t-empty,
-.phps-t-while,
-.phps-t-do,
-.phps-t-exit,
-.phps-t-try,
-.phps-t-catch,
-.phps-t-unset,
-.phps-t-list,
-.phps-t-array,
-.phps-t-echo,
 .phps-t-if,
-.phps-t-switch,
 .phps-t-isset,
 .phps-t-exclaim,
 .phps-t-for,
 .phps-t-foreach,
 .phps-t-return,
+.phps-t-double-arrow,
 .phps-t-as,
 .phps-t-or,
-.phps-t-logical-and,
-.phps-t-logical-or,
 .phps-t-case,
 .phps-t-default,
 .phps-t-break,
@@ -119,10 +102,15 @@ body, html {
 .phps-t-and,
 .phps-t-xor,
 .phps-t-global,
+.phps-t-logical-and,
+.phps-t-logical-or,
 .phps-t-else,
 .phps-t-elseif,
+.phps-t-switch,
 .phps-t-use,
 .phps-t-var,
+.phps-t-inc,
+.phps-t-dec,
 .phps-t-function,
 .phps-t-public,
 .phps-t-private,
@@ -137,41 +125,37 @@ body, html {
 .phps-t-file, 
 .phps-t-line, 
 .phps-t-dir, 
-.phps-t-func-c, 
-.phps-t-class-c, 
+.phps-t-func-c, .phps-t-class-c, 
 .phps-t-method-c, 
 .phps-t-ns-c
-	{color: #0000FF; font-weight:bold;}
-	
-.phps-t-open-tag,
-.phps-t-close-tag
-	{color: #FF0000;  font-weight:bold;}
+	{color: #CF628D;}
 
 .phps-t-const
-	{color: #000000;}
+	{color: #CF628D;}
 	
-.phps-t-variable, .phps-t-string-varname, .funclistline, .phps-t-variable-marked
-	{color: #000080;}
-
+.phps-t-variable, 
+.phps-t-variable-marked,
+.phps-t-string-varname, 
+.funclistline
+	{color: #1487BD;}
+	
 .phps-t-variable-marked
-	{background-color:#F5A69A;}
-
+	{background-color:#132F3C;}
+	
 .phps-tainted-var
-	{color: #0606Ed;}
+	{color: #1AA9EC;}
 	
 .phps-t-lnumber
-	{color: #FF8000}
+	{color: #CF6A4C}
 
 .phps-t-encapsed-and-whitespace,
-.phps-t-constant-encapsed-string,
-.phps-t-start-heredoc,
-.phps-t-end-heredoc
-	{color: #4A4A4A;}
-
+.phps-t-constant-encapsed-string
+	{color: #6C8EB7;}
+/* FFCE42 */
 .phps-t-inline-html
-	{color: #000000; font-weight:bold;}
+	{color: #FFCE42;}
 
 .phps-t-comment,
 .phps-t-ml-comment,
 .phps-t-doc-comment
-	{color: #008000}
+	{color: #2C425D}
